# git-initializer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  git-initializer.sh  go.mod  main.go
constants/: constants.go
errors/: cerrors.go
helpers/: helper.go
include/git_initializer/: cerrors.h  constants.h  custom_errors.h  helper.h  parser.h  utils.h
include/git_initializer/cmd/: add.h  init.h
include/git_initializer/parser/: parser.h
parser/: parsers.go
src/: CMakeLists.txt  constants.cpp  helper.cpp  main.cpp  parser.cpp  utils.cpp
src/cmd/: add.cpp  init.cpp
src/parser/: parser.cpp
static/: help_msg.txt  ignores.json  valid_ignores_list.txt
types/: types.go
utils/: utils.go
